# whirl

./: .gitignore  Cargo.toml
runtime/: Cargo.toml  compile.sh  linked.wasm  woo.syms
runtime/js/: jslib.js
runtime/src/: '  bifs.rs  codegen_api.rs  fun_n_launchpad.rs  heap.rs  js_api.rs  lib.rs  scheduler.rs  term.rs
runtime/web/: bootstrap.js  index.html  index.js
termlib/: Cargo.toml
termlib/src/: lib.rs  vm.rs
whirl_cli/: .tool-versions  Cargo.toml  testing.erl
whirl_cli/src/: gen_init.rs  main.rs
